[KNUDEV-30] Fixed department creation