@@ -1,7 +1,7 @@
 package ua.knu.knudev.teammanager.service;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Service;
 import ua.knu.knudev.knudevcommon.utils.AcademicUnitsIds;
 import ua.knu.knudev.teammanager.domain.Department;
@@ -14,7 +14,9 @@ import ua.knu.knudev.teammanagerapi.exception.DepartmentException;
 import ua.knu.knudev.teammanagerapi.request.DepartmentCreationRequest;
 
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -24,37 +26,115 @@ public class DepartmentService implements DepartmentApi {
     private final SpecialtyRepository specialtyRepository;
 
     @Override
+    @Transactional
     public void createDepartment(DepartmentCreationRequest departmentCreationRequest) {
-        Department department = new Department();
-        Set<SpecialtyCreationDto> specialties = departmentCreationRequest.specialties();
+        validateDepartmentCreationRequest(departmentCreationRequest.specialties());
+
         String departmentCreationEnglishName = departmentCreationRequest.nameInEnglish();
         String departmentCreationUkrainianName = departmentCreationRequest.nameInUkrainian();
+        Set<SpecialtyCreationDto> specialtiesDto = departmentCreationRequest.specialties();
 
-        Set<SpecialtyCreationDto> specialtyCreationDtos = checkIfDepartmentHasValidSpecialties(specialties);
         assertDepartmentDoesNotExist(departmentCreationEnglishName, departmentCreationUkrainianName);
 
-        List<Double> specialtiesCodeNames = specialtyCreationDtos.stream()
+        List<Double> specialtiesCodeNames = specialtiesDto.stream()
                 .map(SpecialtyCreationDto::codeName)
-                .toList();
+                .collect(Collectors.toList());
 
-        List<Specialty> allSpecialtiesByExistingCodeNames = specialtyRepository.findSpecialtiesByCodeNameIn(specialtiesCodeNames);
-        Set<SpecialtyCreationDto> notExistInDbSpecialtyCreationDtos = chooseNotExistInDbSpecialties(allSpecialtiesByExistingCodeNames,
-                specialtyCreationDtos);
+        List<Specialty> existingSpecialtiesByCodename = specialtyRepository.findSpecialtiesByCodeNameIn(specialtiesCodeNames);
+        List<Specialty> existingSpecialtiesByNames = specialtyRepository.findSpecialtiesByNameInEnglishInOrNameInUkrainianIn(
+                specialtiesDto.stream().map(SpecialtyCreationDto::nameInEnglish).collect(Collectors.toSet()),
+                specialtiesDto.stream().map(SpecialtyCreationDto::nameInUkrainian).collect(Collectors.toSet())
+        );
 
-        department.setNameInEnglish(departmentCreationEnglishName);
-        department.setNameInUkrainian(departmentCreationUkrainianName);
+        filterNotValidRequestSpecialties(existingSpecialtiesByCodename, existingSpecialtiesByNames, departmentCreationRequest.specialties());
 
-        if (CollectionUtils.isNotEmpty(notExistInDbSpecialtyCreationDtos)) {
-            notExistInDbSpecialtyCreationDtos.forEach(specialtyDto -> {
-                Specialty specialty = new Specialty();
-                specialty.setCodeName(specialtyDto.codeName());
-                specialty.setNameInEnglish(specialtyDto.nameInEnglish());
-                specialty.setNameInUkrainian(specialtyDto.nameInUkrainian());
-                department.addSpecialty(specialty);
-            });
-        }
+        Map<Double, Specialty> existingSpecialtiesCodeNameSpecialtyMap = existingSpecialtiesByCodename.stream()
+                .collect(Collectors.toMap(Specialty::getCodeName, specialty -> specialty));
+        Set<SpecialtyCreationDto> newSpecialtiesToCreate = specialtiesDto.stream()
+                .filter(dto -> !existingSpecialtiesCodeNameSpecialtyMap.containsKey(dto.codeName()))
+                .collect(Collectors.toSet());
+
+        Set<Specialty> newSpecialties = newSpecialtiesToCreate.stream()
+                .map(dto -> Specialty.builder()
+                        .codeName(dto.codeName())
+                        .nameInEnglish(dto.nameInEnglish())
+                        .nameInUkrainian(dto.nameInUkrainian())
+                        .build())
+                .collect(Collectors.toSet());
+
+        Set<Specialty> allSpecialties = new HashSet<>(existingSpecialtiesByCodename);
+        allSpecialties.addAll(newSpecialties);
+
+        Department department = Department.builder()
+                .nameInEnglish(departmentCreationEnglishName)
+                .nameInUkrainian(departmentCreationUkrainianName)
+                .specialties(allSpecialties)
+                .build();
 
         departmentRepository.save(department);
+    }
+
+    private void filterNotValidRequestSpecialties(
+            List<Specialty> existingSpecialtiesByCodename,
+            List<Specialty> existingSpecialtiesByName,
+            Set<SpecialtyCreationDto> requestSpecialties
+    ) {
+
+        Set<SpecialtyCreationDto> codeNameMismatches = new HashSet<>();
+        Set<SpecialtyCreationDto> nameMismatches = new HashSet<>();
+
+        //Create Maps for Efficient Lookup
+        Map<Double, Specialty> existingByCodeName = existingSpecialtiesByCodename.stream()
+                .collect(Collectors.toMap(Specialty::getCodeName, Function.identity()));
+
+        //Map names to their corresponding codeNames for name mismatch checks
+        Map<String, Set<Double>> existingCodeNamesByEnglishName = existingSpecialtiesByName.stream()
+                .collect(Collectors.groupingBy(
+                        Specialty::getNameInEnglish,
+                        Collectors.mapping(Specialty::getCodeName, Collectors.toSet())
+                ));
+
+        Map<String, Set<Double>> existingCodeNamesByUkrainianName = existingSpecialtiesByName.stream()
+                .collect(Collectors.groupingBy(
+                        Specialty::getNameInUkrainian,
+                        Collectors.mapping(Specialty::getCodeName, Collectors.toSet())
+                ));
+
+        //Identify Code Name Mismatches
+        requestSpecialties.stream()
+                .filter(dto -> existingByCodeName.containsKey(dto.codeName()))
+                .filter(dto -> {
+                    Specialty existing = existingByCodeName.get(dto.codeName());
+                    return !existing.getNameInEnglish().equals(dto.nameInEnglish()) ||
+                            !existing.getNameInUkrainian().equals(dto.nameInUkrainian());
+                })
+                .forEach(codeNameMismatches::add);
+
+        //Identify Name Mismatches Based on nameInEnglish
+        requestSpecialties.stream()
+                .filter(dto -> existingCodeNamesByEnglishName.containsKey(dto.nameInEnglish()))
+                .filter(dto -> !existingCodeNamesByEnglishName.get(dto.nameInEnglish()).contains(dto.codeName()))
+                .forEach(nameMismatches::add);
+
+        //Identify Name Mismatches Based on nameInUkrainian
+        requestSpecialties.stream()
+                .filter(dto -> existingCodeNamesByUkrainianName.containsKey(dto.nameInUkrainian()))
+                .filter(dto -> !existingCodeNamesByUkrainianName.get(dto.nameInUkrainian()).contains(dto.codeName()))
+                .forEach(nameMismatches::add);
+
+        List<String> errorMessages = new ArrayList<>();
+        //todo better exception messages
+        if (!codeNameMismatches.isEmpty()) {
+            errorMessages.add("Code name mismatch");
+        }
+        if (!nameMismatches.isEmpty()) {
+            errorMessages.add("Name mismatch");
+        }
+        if(!errorMessages.isEmpty()) {
+            throw new DepartmentException(
+                    String.join("; ", errorMessages)
+            );
+        }
     }
 
     public Department getById(UUID id) {
@@ -82,66 +162,47 @@ public class DepartmentService implements DepartmentApi {
         }
     }
 
-    private boolean existByNameInEnglish(String name) {
+    private boolean existsByNameInEnglish(String name) {
         return departmentRepository.existsByNameInEnglish(name);
     }
 
-    private boolean existByNameInUkrainian(String name) {
+    private boolean existsByNameInUkrainian(String name) {
         return departmentRepository.existsByNameInUkrainian(name);
     }
 
-    private static Set<SpecialtyCreationDto> chooseNotExistInDbSpecialties(List<Specialty> specialties, Set<SpecialtyCreationDto> specialtyCreationDtos) {
-        if (CollectionUtils.isEmpty(specialties)) {
-            return specialtyCreationDtos;
+    private void validateDepartmentCreationRequest(Set<SpecialtyCreationDto> specialtyCreationDtos) {
+        long inputSpecialtiesSize = specialtyCreationDtos.size();
+
+        List<Function<SpecialtyCreationDto, ?>> fieldExtractors = List.of(
+                SpecialtyCreationDto::nameInEnglish,
+                SpecialtyCreationDto::nameInUkrainian,
+                SpecialtyCreationDto::codeName
+        );
+
+        boolean allFieldsUnique = fieldExtractors.stream()
+                .allMatch(extractor -> isStreamUnique(
+                        specialtyCreationDtos.stream().map(extractor),
+                        inputSpecialtiesSize
+                ));
+
+        if (!allFieldsUnique) {
+            throw new DepartmentException("Specialties in the request are not unique");
         }
-        if (CollectionUtils.isEmpty(specialtyCreationDtos)) {
-            return Collections.emptySet();
-        }
-
-        Set<Double> existingCodeNames = specialties.stream()
-                .map(Specialty::getCodeName)
-                .collect(Collectors.toSet());
-
-        return specialtyCreationDtos.stream()
-                .filter(specialtyCreationDto -> !existingCodeNames.contains(specialtyCreationDto.codeName()))
-                .collect(Collectors.toSet());
-    }
-
-    private static Set<SpecialtyCreationDto> checkIfDepartmentHasValidSpecialties(Set<SpecialtyCreationDto> specialtyCreationDtos) {
-        if (CollectionUtils.isEmpty(specialtyCreationDtos)) {
-            return Collections.emptySet();
-        }
-
-        List<String> specialtiesEnglishNames = new ArrayList<>();
-        List<String> specialtiesUkrainianNames = new ArrayList<>();
-        List<Double> specialtiesCodeNames = new ArrayList<>();
-
-        specialtyCreationDtos.forEach(specialty -> {
-            String nameInEnglish = specialty.nameInEnglish();
-            String nameInUkrainian = specialty.nameInUkrainian();
-            Double codeName = specialty.codeName();
-
-            if (specialtiesEnglishNames.contains(nameInEnglish) || specialtiesUkrainianNames.contains(nameInUkrainian)
-                    || specialtiesCodeNames.contains(codeName)) {
-                throw new DepartmentException("Specialty with name in english " + nameInEnglish + " and with name in ukrainian: "
-                        + nameInUkrainian + " and with code name " + codeName + " are not unique!");
-            }
-            specialtiesEnglishNames.add(nameInEnglish);
-            specialtiesUkrainianNames.add(nameInUkrainian);
-            specialtiesCodeNames.add(codeName);
-        });
-
-        return specialtyCreationDtos;
     }
 
     private void assertDepartmentDoesNotExist(String departmentNameInEnglish, String departmentNameInUkrainian) {
-        boolean existByNameInEnglish = existByNameInEnglish(departmentNameInEnglish);
-        boolean existByNameInUkrainian = existByNameInUkrainian(departmentNameInUkrainian);
+        boolean existByNameInEnglish = existsByNameInEnglish(departmentNameInEnglish);
+        boolean existByNameInUkrainian = existsByNameInUkrainian(departmentNameInUkrainian);
 
-        if (existByNameInUkrainian && existByNameInEnglish) {
-            throw new DepartmentException("Department with name in ukrainian: " + departmentNameInUkrainian + " and with name in english: "
-                    + departmentNameInEnglish + "already exists!");
+        if (existByNameInUkrainian || existByNameInEnglish) {
+            throw new DepartmentException(
+                    String.format("Department with name %s already exists", departmentNameInEnglish)
+            );
         }
+    }
+
+    private boolean isStreamUnique(Stream<?> stream, long size) {
+        return stream.distinct().count() == size;
     }
 
     public Department create(Department department) {
